2007-09-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/Core/Banshee.Base/Banshee.Library/Import.cs:
	* src/Core/Banshee.Base/StreamTagger.cs: Use TagLib to filter files
	that don't contain audio only instead of filtering by the mimetype
	which breaks for some mp4 files (BGO #472747)

2007-09-04  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient: Migrated Banshee.ThickClient 

2007-09-04  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services: Migrated Banshee.Services

	* src/Core/Banshee.Services/Banshee.ServiceStack/ServiceManager.cs:
	* src/Core/Banshee.Services/Banshee.ServiceStack/Application.cs: Disabled
	some things to be added back later

	* src/Core/Banshee.Base/Globals.cs: Add Banshee.Services startup to the
	existing startup sequence for now

	* configure.ac:
	* src/Core/Makefile.am:
	* src/Core/Core.mds:
	* src/Core/Banshee.Base/Makefile.am:
	* build/Common.Makefile: Configure Banshee.Services in the build

2007-08-29  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena:
	* src/Core/Hyena.Gui: Added Hyena back from NG

	* build/Common.Makefile:
	* configure.ac:
	* build/banshee.pc.in: Build rules for Hyena

	* src/Plugins/Banshee.Plugins.Radio/StationManager.cs: Fixed build bug

2007-08-29  Aaron Bockover  <abock@gnome.org>

	* src/Plugins/Banshee.Plugins.Radio/StationManager.cs:
	* src/Plugins/Banshee.Plugins.Radio/banshee-plugin-radio.schemas.in:
	Patch from Mário Meyer to allow setting the radio station base URI from
	which Banshee will load online radio stations

2007-08-19  Aaron Bockover  <abock@gnome.org>

	0.13.1 Released

	* configure.ac: Bump to 0.13.1

	* NEWS: Updated release notes

2007-08-19  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Base/Gui/TrackEditor.cs: Reset the undo managers
	bound to each field when changing tracks

	* src/Core/Banshee.Base/Hyena/UndoManager.cs: Added a clear method

	* src/Core/Banshee.Base/Hyena.Gui/EntryUndoAdapter.cs: Proxy the UndoManager
